# meta-learning

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
examples/: van_der_pol.py  van_der_pol_comparison.py  van_der_pol_fomaml.py  van_der_pol_maml.py  van_der_pol_reptile.py
examples/datasets/: van_der_pol.py
meta-learning/: fomaml.py  maml.py  reptile.py
meta_learning/: adapted_model.py  fomaml.py  maml.py  reptile.py
meta_learning/model/: mlp.py  neural_ode.py
